Add script to change machine’s hostname (#94)
* Order list with paths by name

* Add script to change the machine’s hostname
Populates the new name to `/etc/hosts` and `/etc/hostname`

* Fix indentation from tabs to spaces

* Use `127.0.1.1` as target IP for new hostname
See https://www.debian.org/doc/manuals/debian-reference/ch05.en.html#_the_hostname_resolution

* Use full line length for comment

(It’s still below 80 chars)

* Print error messages to stderr

* Refactor code style

- Access variables safely (e.g. quoted)
- Use shorthand stream redirection
- Use `read -r` to treat backslashes properly
- Construct proper `printf` statement

* Add top-level description (comment) for the script

* Configure script to exit on error

* Revise variable naming convention and make constants readonly

- Constants are uppercase and live at the top
- Regular variables are lowercase

* Correct number of printf placeholders

All additional printf variables would be appended anyways, but wasn’t correct regardless. Also there was the final newline missing.

* Add final newline when writing `/etc/hosts`

* Prefer `(( ))` for arithmetic comparison

* Add more information about the layout of `etc/hostname`

* Adhere to style guide regarding variable naming and access

- Quote variable access
- Curly brace names
- Use uppercase and `readonly` for constants

* Use single quotes `'` for strings with no substitutions

* Remove redundant trailing newline

* Use markers that make start and end clearer

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -50,6 +50,7 @@
     group: root
     mode: '0755'
   with_items:
+    - change-hostname
     - collect-debug-logs
     - read-update-log
     - update
@@ -59,9 +60,10 @@
     sudo_paths:
       - /sbin/shutdown
       - /usr/sbin/service tinypilot-updater start
-      - "{{ tinypilot_privileged_dir }}/update"
+      - "{{ tinypilot_privileged_dir }}/change-hostname"
       - "{{ tinypilot_privileged_dir }}/collect-debug-logs"
       - "{{ tinypilot_privileged_dir }}/read-update-log"
+      - "{{ tinypilot_privileged_dir }}/update"
 
 - name: enable tinypilot to execute a whitelist of commands as sudo
   lineinfile:
