Make usb-gadget recyclable
Add `remove-usb-gadget` script, which follows kernel docs, item 6 & 7.
See https://www.kernel.org/doc/Documentation/usb/gadget_configfs.txt

Modify tasks/install_usb_gadget to install this script as well

Update the systemd service file to allow up/down state, and call this
new script on stop. Now we can `systemctl start|stop|restart usb-gadget`
:awesome:

--- a/tasks/install_usb_gadget.yml
+++ b/tasks/install_usb_gadget.yml
@@ -48,6 +48,14 @@
     group: root
     mode: '0700'
 
+- name: copy usb-gadget de-initializer
+  copy:
+    src: remove-usb-gadget
+    dest: "{{ tinypilot_privileged_dir }}/remove-usb-gadget"
+    owner: root
+    group: root
+    mode: '0700'
+
 - name: install usb-gadget initializer as a service
   template:
     src: usb-gadget.systemd.j2
