Create a home dir for tinypilot user
Now that we store user settings there, it should have a home directory.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -40,7 +40,7 @@
     name: "{{ tinypilot_user }}"
     group: "{{ tinypilot_group }}"
     system: yes
-    create_home: no
+    create_home: yes
 
 - name: copy admin scripts
   copy:
