Set the Host header within the websocket location block.

--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -35,6 +35,7 @@
             proxy_pass http://tinypilot;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $http_host;
           }
           location /state {
             proxy_pass http://ustreamer;
