Switch to tinypilot fork of ansible-role-nginx

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,4 @@
 ---
 - src: mtlynch.ustreamer
-- src: geerlingguy.nginx
-  version: 2.8.0
+- src: https://github.com/tiny-pilot/ansible-role-nginx
+  version: 2.8.1
