Switch to TinyPilot fork of ansible-role-nginx (#118)
* Switch to tinypilot fork of ansible-role-nginx

* Fix references to geerlingguy nginx

* Fix nginx role name

--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -9,7 +9,7 @@
 
 - name: import nginx role
   import_role:
-    name: geerlingguy.nginx
+    name: ansible-role-nginx
   vars:
     ustreamer_port: 8001
     nginx_upstreams:
