Revert "Save changed ansible variables to settings file."

--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -11,6 +11,7 @@
   import_role:
     name: ansible-role-nginx
   vars:
+    ustreamer_port: 8001
     nginx_upstreams:
       - name: tinypilot
         servers:
