--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -54,6 +54,7 @@
     - collect-debug-logs
     - read-update-log
     - update
+    - update-video-settings
 
 - name: store passwordless sudo paths
   set_fact:
