Add update-video-settings to list of sudo paths
TinyPilot web UI requires acesss to this script, so we need to enable sudo execution.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -65,6 +65,7 @@
       - "{{ tinypilot_privileged_dir }}/collect-debug-logs"
       - "{{ tinypilot_privileged_dir }}/read-update-log"
       - "{{ tinypilot_privileged_dir }}/update"
+      - "{{ tinypilot_privileged_dir }}/update-video-settings"
 
 - name: enable tinypilot to execute a whitelist of commands as sudo
   lineinfile:
