Update references to ansible-role-ustreamer
They're no longer in the mtlynch namespace, and are now part of the tiny-pilot Github org.

--- a/tasks/ustreamer.yml
+++ b/tasks/ustreamer.yml
@@ -1,7 +1,7 @@
 ---
 - name: import uStreamer role
   import_role:
-    name: mtlynch.ustreamer
+    name: ansible-role-ustreamer
   vars:
     ustreamer_interface: '127.0.0.1'
     ustreamer_port: 8001
