--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,3 @@
 ---
-- src: mtlynch.ustreamer
+- src: https://github.com/tiny-pilot/ansible-role-ustreamer
 - src: https://github.com/tiny-pilot/ansible-role-nginx
