--- a/vars/main.yml
+++ b/vars/main.yml
@@ -4,6 +4,9 @@
 # will break updates.
 tinypilot_user: tinypilot
 
+# uStreamer variables are placed here, instead of in `defaults/main.yml`,
+# in order to elevate their variable precedence. These variables will now
+# override the default variables in the uStreamer role.
 ustreamer_interface: '127.0.0.1'
 ustreamer_port: 8001
 ustreamer_repo: https://github.com/tiny-pilot/ustreamer.git
