--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,3 +3,11 @@
 # relies on the tinypilot user being named "tinypilot" so changing this value
 # will break updates.
 tinypilot_user: tinypilot
+
+# uStreamer variables are placed here, instead of in `defaults/main.yml`,
+# in order to elevate their variable precedence. These variables will now
+# override the default variables in the uStreamer role.
+ustreamer_interface: '127.0.0.1'
+ustreamer_port: 8001
+ustreamer_repo: https://github.com/tiny-pilot/ustreamer.git
+ustreamer_repo_version: 'v3.26'
