--- a/tasks/install_usb_gadget.yml
+++ b/tasks/install_usb_gadget.yml
@@ -65,23 +65,16 @@
     mode: '0644'
   register: usb_gadget_template
 
-- name: patch HID module
+# This custom USB kernel module fixes compatibility issues in pre-boot for OS X
+# systems. The patch already exists in kernal versions >= 5.15.
+# Issue: https://github.com/tiny-pilot/ansible-role-tinypilot/issues/151
+- name: patch USB kernel module
   get_url:
-    url: https://storage.googleapis.com/jason-tinypilotkvm/usb_f_hid.ko
+    url: https://github.com/tiny-pilot/hid-backport/raw/master/bin/usb_f_hid.ko
     dest: /lib/modules/{{ ansible_kernel }}/kernel/drivers/usb/gadget/function/usb_f_hid.ko
     mode: '0664'
+    checksum: sha256:45f9c885e8b0e1d2fdaf4aec2179a38ad9a1c76c71f44c997c99a865fdfe72d7
   when: ansible_kernel is version('5.15', '<') and ansible_kernel is version('5.10', '>=')
-
-- name: patch usb-gadget initializer
-  ansible.builtin.lineinfile:
-    path: "{{ tinypilot_privileged_dir }}/init-usb-gadget"
-    line: 'echo 1 > "${KEYBOARD_FUNCTIONS_DIR}/no_out_endpoint"'
-    # Either replace the line this regex is found on.
-    regex: ^{{ 'echo 1 > "${KEYBOARD_FUNCTIONS_DIR}/no_out_endpoint"' | regex_escape() }}
-    # Or insert the line after this regex is found.
-    insertafter: ^{{ 'mkdir -p "$KEYBOARD_FUNCTIONS_DIR"' | regex_escape() }}$
-    # Otherwise add the line to the EOF.
-  when: ansible_kernel is version('5.10', '>=')
 
 - name: enable systemd usb-gadget initializer service file
   systemd:
