Add logic to reload HID module.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -15,3 +15,8 @@
     daemon_reload: yes
     # Never run automatically.
     enabled: no
+
+- name: start usb-gadget service
+  service:
+    name: usb-gadget
+    state: started
