--- a/vars/main.yml
+++ b/vars/main.yml
@@ -11,3 +11,6 @@ ustreamer_interface: '127.0.0.1'
 ustreamer_port: 8001
 ustreamer_repo: https://github.com/tiny-pilot/ustreamer.git
 ustreamer_repo_version: 'v3.26'
+
+# janus variables
+janus_ws_port: 8002
