--- a/.github/workflows/merge-pro.yml
+++ b/.github/workflows/merge-pro.yml
@@ -2,7 +2,7 @@ name: Merge community changes into pro repo
 on:
   push:
     branches:
-      - merge-pro
+      - master
 jobs:
   updateFork:
     runs-on: ubuntu-latest
