--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,18 @@
 ---
-- name: install uStreamer
-  import_tasks: ustreamer.yml
-  tags:
-    - ustreamer
+# Disable uStreamer install, as this experimental version runs it
+# under Docker with Janus.
+
+#- name: install uStreamer
+#  import_tasks: ustreamer.yml
+#  tags:
+#    - ustreamer
+
+- name: disable uStreamer
+  systemd:
+    name: ustreamer
+    daemon_reload: yes
+    enabled: no
+    state: stopped
 
 - name: install nginx
   import_tasks: nginx.yml
