--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,22 +1,8 @@
 ---
-# Disable uStreamer install, as this experimental version runs it
-# under Docker with Janus.
-
-#- name: install uStreamer
-#  import_tasks: ustreamer.yml
-#  tags:
-#    - ustreamer
-
-- name: Populate service facts
-  ansible.builtin.service_facts:
-
-- name: disable uStreamer
-  systemd:
-    name: ustreamer
-    daemon_reload: yes
-    enabled: no
-    state: stopped
-  when: "'ustreamer' in services"
+- name: install uStreamer
+  import_tasks: ustreamer.yml
+  tags:
+    - ustreamer
 
 - name: install nginx
   import_tasks: nginx.yml
