--- a/vars/main.yml
+++ b/vars/main.yml
@@ -10,7 +10,10 @@ tinypilot_user: tinypilot
 ustreamer_interface: '127.0.0.1'
 ustreamer_port: 8001
 ustreamer_repo: https://github.com/tiny-pilot/ustreamer.git
-ustreamer_repo_version: 'v3.26'
+ustreamer_repo_version: v4.13
+ustreamer_h264_sink: tinypilot::ustreamer::h264
+ustreamer_h264_sink_mode: 777
+ustreamer_h264_sink_rm: yes
 
 # janus variables
 janus_ws_port: 8002
