--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,3 +16,4 @@ tinypilot_mouse_interface: /dev/hidg1
 tinypilot_enable_debug_logging: no
 tinypilot_pip_args: ""
 tinypilot_app_settings_file: "{{ tinypilot_dir }}/app_settings.cfg"
+tinypilot_install_janus: no
