--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,4 @@
 ---
 - src: https://github.com/tiny-pilot/ansible-role-ustreamer
 - src: https://github.com/tiny-pilot/ansible-role-nginx
+- src: https://github.com/tiny-pilot/ansible-role-janus-gateway
