--- a/requirements.yml
+++ b/requirements.yml
@@ -2,3 +2,4 @@
 - src: https://github.com/tiny-pilot/ansible-role-ustreamer
 - src: https://github.com/tiny-pilot/ansible-role-nginx
 - src: https://github.com/tiny-pilot/ansible-role-janus-gateway
+  version: tinypilot-janus-integration
