--- a/tasks/ustreamer.yml
+++ b/tasks/ustreamer.yml
@@ -1,4 +1,18 @@
 ---
+# We're unable to build the uStreamer Janus plugin because an include statement
+# references the wrong file path.
+# TODO: Create a PR to patch this bug in the janus-gateway repo.
+- name: patch Janus plugin.h file to successfully include refcount.h file
+  command: sed -i -e 's|^#include "refcount.h"$|#include "../refcount.h"|g' "{{ janus_install_dir }}/include/janus/plugins/plugin.h"
+  when: tinypilot_install_janus
+
 - name: import uStreamer role
   import_role:
     name: ansible-role-ustreamer
+
+- name: install uStreamer Janus plugin
+  copy:
+    remote_src: yes
+    src: "{{ ustreamer_dir }}/janus/libjanus_ustreamer.so"
+    dest: "{{ janus_install_dir }}/lib/janus/plugins/"
+  when: tinypilot_install_janus and ustreamer_compile_janus_plugin
