--- a/vars/main.yml
+++ b/vars/main.yml
@@ -10,4 +10,4 @@ tinypilot_user: tinypilot
 ustreamer_interface: '127.0.0.1'
 ustreamer_port: 8001
 ustreamer_repo: https://github.com/tiny-pilot/ustreamer.git
-ustreamer_repo_version: 'v3.26'
+ustreamer_repo_version: v4.13
