--- a/vars/main.yml
+++ b/vars/main.yml
@@ -11,3 +11,5 @@ ustreamer_interface: '127.0.0.1'
 ustreamer_port: 8001
 ustreamer_repo: https://github.com/tiny-pilot/ustreamer.git
 ustreamer_repo_version: v4.13
+
+janus_version: v1.0.0
