--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,3 +16,6 @@ tinypilot_mouse_interface: /dev/hidg1
 tinypilot_enable_debug_logging: no
 tinypilot_pip_args: ""
 tinypilot_app_settings_file: "{{ tinypilot_dir }}/app_settings.cfg"
+# (Experimental): Install the Janus WebRTC server to enable uStreamer to stream
+# video over H264 instead of MJPEG.
+tinypilot_install_janus: no
