--- a/tasks/ustreamer.yml
+++ b/tasks/ustreamer.yml
@@ -1,4 +1,30 @@
 ---
+# We're unable to build the uStreamer Janus plugin because an include statement
+# references the wrong file path.
+# Issue: https://github.com/tiny-pilot/ansible-role-tinypilot/issues/192
+- name: patch Janus plugin.h file to successfully include refcount.h file
+  command: sed -i -e 's|^#include "refcount.h"$|#include "../refcount.h"|g' "{{ janus_install_dir }}/include/janus/plugins/plugin.h"
+  when: tinypilot_install_janus and ustreamer_compile_janus_plugin
+
 - name: import uStreamer role
   import_role:
     name: ansible-role-ustreamer
+
+- name: create uStreamer Janus plugin config
+  template:
+    src: janus.plugin.ustreamer.jcfg.j2
+    dest: "{{ janus_conf_dir }}/janus.plugin.ustreamer.jcfg"
+  when: >-
+    tinypilot_install_janus
+    and ustreamer_compile_janus_plugin
+    and ustreamer_h264_sink != None
+
+- name: install uStreamer Janus plugin
+  copy:
+    remote_src: yes
+    src: "{{ ustreamer_dir }}/janus/libjanus_ustreamer.so"
+    dest: "{{ janus_install_dir }}/lib/janus/plugins/"
+  when: >-
+    tinypilot_install_janus
+    and ustreamer_compile_janus_plugin
+    and ustreamer_h264_sink != None
