--- a/vars/main.yml
+++ b/vars/main.yml
@@ -10,4 +10,11 @@ tinypilot_user: tinypilot
 ustreamer_interface: '127.0.0.1'
 ustreamer_port: 8001
 ustreamer_repo: https://github.com/tiny-pilot/ustreamer.git
-ustreamer_repo_version: 'v3.26'
+ustreamer_repo_version: v4.13
+
+janus_version: v1.0.0
+
+# These variables are only used within this role and don't affect the Janus
+# role.
+janus_ws_interface: '127.0.0.1'
+janus_ws_port: 8188
