Install pre-built Janus Debian package.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -20,3 +20,8 @@
   service:
     name: usb-gadget
     state: started
+
+- name: restart janus service
+  service:
+    name: janus
+    state: restarted
