Skip installing pre-req packages when we're installing from a Debian package

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -55,6 +55,7 @@
   apt:
     name: "{{ tinypilot_packages }}"
     state: present
+  when: tinypilot_debian_package_path is null
 
 - name: create tinypilot group
   group:
