--- a/tasks/install_usb_gadget.yml
+++ b/tasks/install_usb_gadget.yml
@@ -40,9 +40,9 @@
     reboot_required: >-
       {{ boot_config_lineinfile.changed or modules_lineinfile.changed }}
 
-- name: create TinyPilot privileged folder
+- name: create TinyPilot services folder
   file:
-    path: "{{ tinypilot_privileged_dir }}"
+    path: "{{ tinypilot_services_dir }}"
     state: directory
     owner: "root"
     group: "root"
@@ -50,7 +50,7 @@
 - name: copy usb-gadget initializer
   copy:
     src: init-usb-gadget
-    dest: "{{ tinypilot_privileged_dir }}/init-usb-gadget"
+    dest: "{{ tinypilot_services_dir }}/init-usb-gadget"
     owner: root
     group: root
     mode: '0700'
@@ -58,7 +58,7 @@
 - name: copy usb-gadget de-initializer
   copy:
     src: remove-usb-gadget
-    dest: "{{ tinypilot_privileged_dir }}/remove-usb-gadget"
+    dest: "{{ tinypilot_services_dir }}/remove-usb-gadget"
     owner: root
     group: root
     mode: '0700'
