More debug output

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -32,3 +32,6 @@ ustreamer_repo_version_modern: v5.23
 ustreamer_interface: '127.0.0.1'
 ustreamer_port: 8001
 ustreamer_repo: https://github.com/tiny-pilot/ustreamer.git
+
+tinypilot_foo: 'bar'
+ustreamer_foo: 'baz'
