Fix molecule override

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -26,7 +26,8 @@ provisioner:
       all:
         vars:
           ansible_user: root
-          ustreamer_h264_sink: null
+          ustreamer_overrides:
+            ustreamer_h264_sink: null
 verifier:
   name: ansible
 scenario:
