Use include_role instead of import_role

--- a/tasks/ustreamer.yml
+++ b/tasks/ustreamer.yml
@@ -50,7 +50,7 @@
 
 
 - name: import uStreamer role
-  import_role:
+  include_role:
     name: ansible-role-ustreamer
   vars:
       ustreamer_interface: "{{ ustreamer_overrides.ustreamer_interface }}"
