--- a/vars/main.yml
+++ b/vars/main.yml
@@ -5,6 +5,7 @@
 tinypilot_user: tinypilot
 
 tinypilot_dir: /opt/tinypilot
+tinypilot_privileged_dir: /opt/tinypilot-privileged
 
 # uStreamer variables are placed here, instead of in `defaults/main.yml`,
 # in order to elevate their variable precedence. These variables will now
