--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -19,4 +19,4 @@
       include_role:
         name: "ansible-role-tinypilot"
       vars:
-        tinypilot_debian_package_path: "{{ lookup('ansible.builtin.fileglob', 'tinypilot*.deb') }}"
+        tinypilot_debian_package_path: /opt/debian-pkgs/tinypilot_latest_all.deb
