Drop support for git-based installs (#251)
git-based installs don't *really* work anyway, as of #233 because the
git-based install stopped installing privileged scripts.

The only reason the git-based version remained was that we hadn't
figured out how to test the Debian-based version in CI.

This change drops the remaining references to the git-based install and
switches the automated tests to use the Debian-based version.

This solution has the drawback of [duplicating code from the TinyPilot
repo](https://github.com/tiny-pilot/tinypilot/blob/711e9f918b379835ed071099bbf0bf41030f2322/.circleci/config.yml#L76L85),
but it's only 9 lines. We'll be able to eliminate this duplication when
we [fold the ansible role into the core
repo](https://github.com/tiny-pilot/tinypilot/issues/1174).

Fixes #218

<a data-ca-tag
href="https://codeapprove.com/pr/tiny-pilot/ansible-role-tinypilot/251"><img
src="https://codeapprove.com/external/github-tag-allbg.png" alt="Review
on CodeApprove" /></a>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,12 +22,33 @@ jobs:
       - run:
           name: Run static analysis on bash scripts
           command: ./tests/check-bash
+  build_debian_package:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - run:
+          name: Clone TinyPilot core repo
+          command: git clone https://github.com/tiny-pilot/tinypilot.git .
+      - setup_remote_docker:
+          version: 20.10.11
+      - run:
+          name: Build Debian package
+          command: ./dev-scripts/build-debian-pkg
+      - persist_to_workspace:
+          root: ./debian-pkg/releases
+          paths:
+            - "*.deb"
   build:
     machine:
       image: ubuntu-2004:202010-01
     resource_class: large
     steps:
       - checkout
+      - attach_workspace:
+          at: ./debian-pkgs
+      - run:
+          name: Give TinyPilot Debian package a predictable filename
+          command: mv debian-pkgs/tinypilot*.deb debian-pkgs/tinypilot_latest_all.deb
       - run:
           name: Create symlink to role
           command: |
@@ -53,4 +74,7 @@ workflows:
     jobs:
       - check_whitespace
       - check_bash
-      - build
+      - build_debian_package
+      - build:
+          requires:
+            - build_debian_package
