--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -9,6 +9,7 @@ platforms:
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - "${PWD}/debian-pkgs:/opt/debian-pkgs:ro"
     privileged: true
     pre_build_image: true
   - name: debian11
@@ -16,6 +17,7 @@ platforms:
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - "${PWD}/debian-pkgs:/opt/debian-pkgs:ro"
     privileged: true
     pre_build_image: true
 provisioner:
